[gd_scene load_steps=5 format=3 uid="uid://dx8wlsots67hb"]

[ext_resource type="Script" path="res://prog76a.gd" id="1_cfcoh"]

[sub_resource type="Theme" id="Theme_3v7vj"]
default_font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_h8gw3"]
font_size = 32

[sub_resource type="Theme" id="Theme_n3xt3"]
default_font_size = 32

[node name="prog76a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cfcoh")

[node name="lneDigit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 61.0
offset_right = 758.0
offset_bottom = 126.0
theme = SubResource("Theme_3v7vj")
placeholder_text = "Enter Least Favorite Digit"

[node name="lblOutput" type="Label" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 145.0
offset_right = 639.0
offset_bottom = 482.0
label_settings = SubResource("LabelSettings_h8gw3")
horizontal_alignment = 2

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 520.0
offset_right = 279.0
offset_bottom = 594.0
theme = SubResource("Theme_n3xt3")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 442.0
offset_top = 520.0
offset_right = 657.0
offset_bottom = 594.0
theme = SubResource("Theme_n3xt3")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 884.0
offset_top = 520.0
offset_right = 1099.0
offset_bottom = 594.0
theme = SubResource("Theme_n3xt3")
text = "Exit
"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
